<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/little_big_planet"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/search"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/draw"
        android:layout_alignLeft="@+id/draw"
        android:drawableTop="@drawable/toolbar_find"
        android:onClick="sendMessage"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/loging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/draw"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:onClick="sendMessage"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/share"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/append"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/loging"
        android:drawableTop="@drawable/communication"
        android:onClick="sendMessage"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/append"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignBaseline="@+id/draw"
        android:layout_alignBottom="@+id/draw"
        android:layout_alignLeft="@+id/share"
        android:drawableTop="@drawable/tag_yellow_add"
        android:onClick="sendMessage"
        android:text="@string/append"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/draw"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/loging"
        android:drawableTop="@drawable/pencil_medium"
        android:onClick="sendMessage"
        android:text="@string/draw"
        android:textColor="@color/white"
        android:textSize="12sp" />
    

</RelativeLayout>