<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/htc_abstract_pattern"
    tools:context=".DrawActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/htc_abstract_pattern" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="8pt"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/EditTextName1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Name Of Your New Map..."
                android:inputType="textPersonName"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location Name"
                android:textSize="8pt"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Name Of Your Location..."
                android:inputType="textPersonName"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/cam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/scrollView1"
        android:src="@drawable/polaroid_camera"
        android:contentDescription="@string/cam"
        android:onClick="sendMessage" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/cam1"
        android:src="@drawable/floppy_drive"
        android:contentDescription="@string/save"
        android:onClick="sendMessage" />

</RelativeLayout>